[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/DynamicFonts/MineTTF_TITLE_whtie.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/DynamicFonts/MinecraftTF_MM_Buttons.tres" type="DynamicFont" id=3]

[node name="StartMenu" type="Control"]
margin_right = 240.0
margin_bottom = 136.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 24.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "SAMPLE TEXT"
align = 1
valign = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 200.0
margin_bottom = 120.0

[node name="NewGameButton" type="Button" parent="ButtonContainer"]
margin_right = 160.0
margin_bottom = 24.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "NEW GAME"

[node name="ResumeButton" type="Button" parent="ButtonContainer"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 52.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "RESUME"

[node name="ReturnButton" type="Button" parent="ButtonContainer"]
margin_top = 56.0
margin_right = 160.0
margin_bottom = 80.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "RETURN"

[connection signal="pressed" from="ButtonContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="ButtonContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ButtonContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
